--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# SSL certificates (local dev only)
+src/camelgo/cert.pem
+src/camelgo/key.pem
