--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pydantic>=2.0",
     "flask",
     "dash",
-    "dash-bootstrap-components"
+    "dash-bootstrap-components",
+    "debugpy>=1.8.17",
 ]
 
 [project.scripts]
